# SafetyCommonLibrary

./: .gitignore  CMakeLists.txt  CommonSSL.cpp  CommonSSLFunctions.cpp  CommonSSLFunctions.h  Networking.cpp  README.md
include/: CommonSSL.h  CommonSSLFunctions.h  Networking.h
